Hello navbar ra profile ko sticky milaideu la day 5

--- a/Client/facebookclone/src/sass/abstracts/_variables.scss
+++ b/Client/facebookclone/src/sass/abstracts/_variables.scss
@@ -5,6 +5,7 @@ $color-grey-dark : #777;
 $color-white: #fff;
 $color-black: #000;
 $color-blue-1:#1877f2;
+$color-blue: rgb(10, 10, 148);
 $color-green-1: green;
 
 //GRID
