--- a/Client/facebookclone/src/sass/main.scss
+++ b/Client/facebookclone/src/sass/main.scss
@@ -16,3 +16,6 @@
 @import "layout/grid";
 @import "layout/comment";
 @import "layout/create-post";
+
+@import "pages/homePage";
+@import "pages/navbar";
