--- a/Client/facebookclone/src/css/style.css
+++ b/Client/facebookclone/src/css/style.css
@@ -197,25 +197,32 @@ body {
         margin-left: 2rem; }
 
 .profile {
-  margin-left: 10rem;
   position: relative;
   height: 100%;
+  width: 100%;
   transition: all 0.2s; }
   .profile_section {
     height: 70vh;
     width: 100%;
     background-image: linear-gradient(rgba(0, 0, 0, 0.2), white 50%); }
   .profile_information {
-    position: sticky;
-    -webkit-position: sticky;
-    top: 0;
     width: 40rem;
-    left: 25rem;
-    height: auto; }
-  .profile__posts {
+    height: 100%;
     position: absolute;
-    top: 52rem;
-    left: 61rem; }
+    top: 54rem;
+    left: 22rem; }
+    .profile_information_intro {
+      position: -webkit-sticky;
+      position: sticky;
+      top: 0; }
+    .profile_information__posts {
+      position: absolute;
+      top: 0rem;
+      left: 36rem; }
+      .profile_information__posts-1 {
+        position: absolute;
+        top: 6rem;
+        left: 46rem; }
   .profile__cover {
     border-radius: 1.2rem;
     width: 80%;
@@ -230,8 +237,8 @@ body {
     padding: 1rem;
     background-color: #fff; }
   .profile__photos {
-    width: 10rem;
-    height: 10rem;
+    width: 9rem;
+    height: 9rem;
     border-radius: 1rem; }
     .profile__photos__heading {
       font-size: 2.6rem; }
@@ -411,3 +418,77 @@ span {
     font-weight: 500;
     margin: 0 3rem;
     border-radius: .5rem; }
+
+.navbar {
+  width: 100%;
+  height: 6rem;
+  background-color: #fff;
+  box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
+  position: sticky;
+  top: 0; }
+  .navbar_left {
+    position: absolute;
+    left: 0rem; }
+    .navbar_left_searchbox {
+      height: 4rem;
+      margin-top: -3.5rem;
+      margin-left: 6rem;
+      display: flex;
+      -webkit-display: flex;
+      width: 90%;
+      background-color: #eee;
+      border-radius: 1rem;
+      outline: none;
+      border: none;
+      padding: 1rem; }
+    .navbar_left_logo {
+      font-size: 3.5rem;
+      margin-top: 1rem;
+      color: #1877f2;
+      background-image: linear-gradient(to right, #1877f2, #0a0a94);
+      -webkit-background-clip: text;
+      color: transparent; }
+  .navbar_right {
+    float: right; }
+  .navbar_middle {
+    position: absolute;
+    left: 50rem; }
+  .navbar_icons {
+    display: inline;
+    padding: 1rem;
+    height: 2rem;
+    width: 2rem;
+    border-radius: 50%; }
+    .navbar_icons:hover {
+      cursor: pointer;
+      background-color: #eee;
+      border-radius: 2rem; }
+  .navbar_icon {
+    margin-top: 2rem;
+    font-size: 2rem;
+    color: #000; }
+  .navbar_btn {
+    display: inline-block;
+    border: none;
+    outline: none;
+    background-color: none; }
+    .navbar_btn_name {
+      text-decoration: none;
+      color: black;
+      display: inline; }
+    .navbar_btn:hover {
+      cursor: pointer;
+      background-color: #eee;
+      border-radius: 2rem; }
+  .navbar__profilepicture {
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    background-size: cover;
+    display: flex;
+    position: absolute;
+    right: 17.5rem;
+    top: 1rem; }
+
+ul {
+  list-style: none; }
