--- a/Client/facebookclone/src/css/style.css
+++ b/Client/facebookclone/src/css/style.css
@@ -3,137 +3,111 @@
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
-}
+  box-sizing: inherit; }
 
 html {
-  font-size: 62.5%;
-}
+  font-size: 62.5%; }
 
 body {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 body {
-  font-family: "Lato", "sans-serif";
+  font-family: 'Lato', 'sans-serif';
   font-weight: 400;
   line-height: 1.7;
-  background-color: #eee;
-}
+  background-color: #eee; }
 
 .profilename {
   color: #000;
   font-size: 2rem;
-  font-weight: 600;
-}
-.profilename--1 {
-  font-size: 1.5rem;
-  color: #000;
-  font-weight: 550;
-  margin-left: 1rem;
-}
+  font-weight: 600; }
+  .profilename--1 {
+    font-size: 1.5rem;
+    color: #000;
+    font-weight: 550;
+    margin-left: 1rem; }
 
 .post__title {
   font-size: 2rem;
-  color: #000;
-}
+  color: #000; }
 
 .like__anchor,
 .comment__anchor {
   text-decoration: none;
   color: #777;
-  font-size: 2rem;
-}
+  font-size: 2rem; }
 
 .post__likes {
   font-size: 1.4rem;
-  float: left;
-}
+  float: left; }
 
 .post__comments {
   font-size: 1.4rem;
-  float: right;
-}
+  float: right; }
 
 .create-post__postanchor {
   text-decoration: none;
-  color: #fff;
-}
+  color: #fff; }
 
 .header {
   text-align: center;
   font-size: 1.5rem;
   border-bottom: 1px solid #eee;
-  margin: 1rem;
-}
+  margin: 1rem; }
 
 .top_bottom_border {
   border-top: 1px solid #777;
-  border-bottom: 1px solid #777;
-}
+  border-bottom: 1px solid #777; }
 
 .u_align_text_center {
-  text-align: center;
-}
+  text-align: center; }
 
 .padding-5 {
-  padding: 0.5rem;
-}
+  padding: .5rem; }
 
 .border-5 {
-  border-radius: 0.5rem;
-}
+  border-radius: .5rem; }
 
 .text-white {
-  color: #fff;
-}
+  color: #fff; }
 
 .border-bottom {
   border-bottom: 1px solid #eee;
-  padding-bottom: 1.3rem;
-}
+  padding-bottom: 1.3rem; }
 
 .remove-textdecoration {
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 .u-margin-right {
-  margin-right: 1rem;
-}
+  margin-right: 1rem; }
 
 .border-2 {
-  border-radius: 2px;
-}
+  border-radius: 2px; }
 
 .btn {
   width: 90%;
   border-radius: 5px;
   margin: 1rem 3rem;
   text-align: center;
-  font-size: 2rem;
-}
-.btn-blue {
-  background-color: #1877f2;
-}
-.btn-blue:active {
-  transform: scale(0.98);
-}
-.btn-blue-1 {
-  display: inline-block;
-  margin-left: 8rem;
-  text-decoration: none;
-  width: auto;
-  background-color: #1877f2;
-  padding: 1.3rem;
-  border-radius: 5px;
-}
-.btn-anchorgreen {
-  margin-left: 8rem;
-  width: 28rem;
-  background-color: green;
-  padding: 1rem;
-  border-radius: 5px;
-}
+  font-size: 2rem; }
+  .btn-blue {
+    background-color: #1877f2; }
+    .btn-blue:active {
+      transform: scale(0.98); }
+    .btn-blue-1 {
+      display: inline-block;
+      margin-left: 8rem;
+      text-decoration: none;
+      width: auto;
+      background-color: #1877f2;
+      padding: 1.3rem;
+      border-radius: 5px; }
+  .btn-anchorgreen {
+    margin-left: 8rem;
+    width: 28rem;
+    background-color: green;
+    padding: 1rem;
+    border-radius: 5px; }
 
 .login-form {
   height: auto;
@@ -142,43 +116,37 @@ body {
   padding: 1rem;
   text-align: center;
   border-radius: 1rem;
-  box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
-}
-.login-form__email {
-  height: 4rem;
-  margin: 1rem 1rem;
-  width: 90%;
-  background-color: #eee;
-  border-radius: 1rem;
-  outline: none;
-  border: none;
-  padding: 2rem;
-}
-.login-form__password {
-  height: 4rem;
-  margin: 1rem 1rem;
-  width: 90%;
-  background-color: #eee;
-  border-radius: 1rem;
-  outline: none;
-  border: none;
-  padding: 2rem;
-}
-.login-form__forgotpassword {
-  text-decoration: none;
-  font-size: 1.5rem;
-  color: #1877f2;
-}
-.login-form__login {
-  text-decoration: none;
-}
-.login-form__anchorgreen {
-  text-decoration: none;
-  color: #fff;
-  background-color: green;
-  padding: 1rem;
-  border-radius: 5px;
-}
+  box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2); }
+  .login-form__email {
+    height: 4rem;
+    margin: 1rem 1rem;
+    width: 90%;
+    background-color: #eee;
+    border-radius: 1rem;
+    outline: none;
+    border: none;
+    padding: 2rem; }
+  .login-form__password {
+    height: 4rem;
+    margin: 1rem 1rem;
+    width: 90%;
+    background-color: #eee;
+    border-radius: 1rem;
+    outline: none;
+    border: none;
+    padding: 2rem; }
+  .login-form__forgotpassword {
+    text-decoration: none;
+    font-size: 1.5rem;
+    color: #1877f2; }
+  .login-form__login {
+    text-decoration: none; }
+  .login-form__anchorgreen {
+    text-decoration: none;
+    color: #fff;
+    background-color: green;
+    padding: 1rem;
+    border-radius: 5px; }
 
 .signup {
   height: auto;
@@ -186,270 +154,215 @@ body {
   background-color: #fff;
   padding: 1rem;
   border-radius: 1rem;
-  box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
-}
-.signup__heading {
-  margin-left: 2rem;
-  font-size: 3rem;
-}
-.signup__paragraph {
-  font-size: 1.4rem;
-  margin-left: 2rem;
-}
-.signup__inputs {
-  border-top: 1px solid #f7f7f7;
-  padding: 1rem;
-}
-.signup__inputs__firstname,
-.signup__inputs__lastname {
-  height: 5rem;
-  width: 42.5%;
-  background-color: #eee;
-  border-radius: 1rem;
-  margin: 1rem 1rem;
-  outline: none;
-  border: none;
-  padding: 2rem;
-}
-.signup__inputs__email,
-.signup__inputs__password,
-.signup__inputs__birthday {
-  height: 5rem;
-  margin: 1rem 1rem;
-  width: 90%;
-  background-color: #eee;
-  border-radius: 1rem;
-  outline: none;
-  border: none;
-  padding: 2rem;
-}
-.signup__inputs__gender {
-  display: inline-block;
-  font-size: 1.5rem;
-  height: 5rem;
-  width: 26.5%;
-  background-color: #eee;
-  border-radius: 1rem;
-  margin: 1rem 1rem;
-  outline: none;
-  border: none;
-  padding: 0.9rem;
-}
-.signup__inputs__gender__checkbox {
-  margin-left: 2rem;
-}
+  box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2); }
+  .signup__heading {
+    margin-left: 2rem;
+    font-size: 3rem; }
+  .signup__paragraph {
+    font-size: 1.4rem;
+    margin-left: 2rem; }
+  .signup__inputs {
+    border-top: 1px solid #f7f7f7;
+    padding: 1rem; }
+    .signup__inputs__firstname, .signup__inputs__lastname {
+      height: 5rem;
+      width: 42.5%;
+      background-color: #eee;
+      border-radius: 1rem;
+      margin: 1rem 1rem;
+      outline: none;
+      border: none;
+      padding: 2rem; }
+    .signup__inputs__email, .signup__inputs__password, .signup__inputs__birthday {
+      height: 5rem;
+      margin: 1rem 1rem;
+      width: 90%;
+      background-color: #eee;
+      border-radius: 1rem;
+      outline: none;
+      border: none;
+      padding: 2rem; }
+    .signup__inputs__gender {
+      display: inline-block;
+      font-size: 1.5rem;
+      height: 5rem;
+      width: 26.5%;
+      background-color: #eee;
+      border-radius: 1rem;
+      margin: 1rem 1rem;
+      outline: none;
+      border: none;
+      padding: 0.9rem; }
+      .signup__inputs__gender__checkbox {
+        margin-left: 2rem; }
 
 .profile {
   position: relative;
   height: 100%;
-  transition: all 0.2s;
-}
-.profile_section {
-  height: 70vh;
   width: 100%;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2), white 50%);
-}
-.profile_information {
-  position: sticky;
-  -webkit-position: sticky;
-  top: 0;
-  width: 40rem;
-  left: 25rem;
-  height: auto;
-}
-.profile__posts {
-  position: absolute;
-  top: 52rem;
-  left: 61rem;
-}
-.profile__cover {
-  border-radius: 1.2rem;
-  width: 80%;
-  height: 50vh;
-  margin: 0 auto;
-}
-.profile__profilepicture-1 {
-  width: 20rem;
-  height: 20rem;
-  border-radius: 50%;
-  margin-top: -7rem;
-  margin-left: 22rem;
-  padding: 1rem;
-  background-color: #fff;
-}
-.profile__photos {
-  width: 10rem;
-  height: 10rem;
-  border-radius: 1rem;
-}
-.profile__photos__heading {
-  font-size: 2.6rem;
-}
-.profile__photos__paragraph {
-  font-size: 1.7rem;
-  color: #777;
-}
-.profile__photos__profile-name {
-  font-size: 1.4rem;
-  font-weight: 600;
-}
-.profile__name {
-  position: absolute;
-  top: 39rem;
-  left: 45rem;
-}
-.profile__name__heading {
-  font-size: 3rem;
-}
-.profile__name__paragraph {
-  font-size: 2rem;
-}
-.profile__button {
-  position: absolute;
-  top: 39rem;
-  right: 40rem;
-}
-.profile_container {
-  width: 35rem;
-  background-color: #fff;
-  height: auto;
-  padding: 1rem;
-  margin: 1rem;
-  border-radius: 2rem;
-  box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
-}
-.profile_intro__icon {
-  color: #777;
-  width: 4px;
-  margin-right: 3rem;
-}
-.profile_intro__paragraph {
-  padding: 1rem;
-  font-size: 1.5rem;
-}
-.profile_intro__paragraph-1 {
-  padding: 1rem;
-  font-size: 1.5rem;
-  border-bottom: 1px solid #f7f7f7;
-  text-align: center;
-}
+  transition: all 0.2s; }
+  .profile_section {
+    height: 55rem;
+    width: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), white 50%); }
+  .profile_information {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .profile_information_intro {
+      width: 40rem;
+      margin-top: -210rem;
+      position: sticky;
+      -webkit-position: sticky;
+      top: 0; }
+    .profile_information__posts {
+      margin-left: -5rem; }
+  .profile__cover {
+    border-radius: 1.2rem;
+    width: 80%;
+    height: 39rem;
+    margin: 0 auto; }
+  .profile__profilepicture {
+    display: flex; }
+  .profile__profilepicture-1 {
+    width: 20rem;
+    height: 20rem;
+    border-radius: 50%;
+    margin-top: -5rem;
+    padding: 0.5rem;
+    background-color: #fff;
+    backface-visibility: hidden; }
+  .profile__photos {
+    width: 9rem;
+    height: 9rem;
+    border-radius: 1rem; }
+    .profile__photos__heading {
+      font-size: 2.6rem; }
+    .profile__photos__paragraph {
+      font-size: 1.7rem;
+      color: #777; }
+    .profile__photos__profile-name {
+      font-size: 1.4rem;
+      font-weight: 600; }
+  .profile__name {
+    margin-left: 1rem; }
+    .profile__name__heading {
+      font-size: 3rem; }
+    .profile__name__paragraph {
+      font-size: 2rem; }
+  .profile__button {
+    margin-left: 10rem; }
+  .profile_intro__icon {
+    color: #777;
+    width: 4px;
+    margin-right: 3rem; }
+  .profile_intro__paragraph {
+    padding: 1rem;
+    font-size: 1.5rem; }
+  .profile_intro__paragraph-1 {
+    padding: 1rem;
+    font-size: 1.5rem;
+    border-bottom: 1px solid #f7f7f7;
+    text-align: center; }
+  .profile_container {
+    width: 35rem;
+    background-color: #fff;
+    height: auto;
+    padding: 1rem;
+    border-radius: 2rem;
+    box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2); }
 
 .post {
   background-color: #fff;
   height: auto;
   width: 50rem;
   padding: 1.5rem;
-  border-radius: 0.5rem;
+  border-radius: .5rem;
   box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
   position: relative;
-  margin: 2rem;
-}
-.post::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-.post__comments,
-.post__likes {
-  color: #000;
-}
-.post__profilepicture {
-  height: 5rem;
-  width: 5rem;
-  border-radius: 50%;
-  background-size: cover;
-  float: left;
-}
-.post__profilepicture__comment {
-  height: 4rem;
-  width: 4rem;
-  border-radius: 50%;
-  background-size: cover;
-  float: left;
-}
-.post__profilepicture__addcomment {
-  padding: 1rem;
-  height: 4rem;
-  margin-left: 1rem;
-  width: 85%;
-  background-color: #eee;
-  border-radius: 1rem;
-  outline: none;
-  border: none;
-}
-.post__time {
-  color: #000;
-  font-size: 1.2rem;
-  margin-left: 0.5rem;
-}
-.post__postimage {
-  height: 38rem;
-}
-.post__postimage--1 {
-  width: 50rem;
-  background-size: cover;
-  position: absolute;
-  left: 0;
-}
+  margin: 2rem; }
+  .post::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .post__comments, .post__likes {
+    color: #000; }
+  .post__profilepicture {
+    height: 5rem;
+    width: 5rem;
+    border-radius: 50%;
+    background-size: cover;
+    float: left; }
+    .post__profilepicture__comment {
+      height: 4rem;
+      width: 4rem;
+      border-radius: 50%;
+      background-size: cover;
+      float: left; }
+    .post__profilepicture__addcomment {
+      padding: 1rem;
+      height: 4rem;
+      margin-left: 1rem;
+      width: 85%;
+      background-color: #eee;
+      border-radius: 1rem;
+      outline: none;
+      border: none; }
+  .post__time {
+    color: #000;
+    font-size: 1.2rem;
+    margin-left: .5rem; }
+  .post__postimage {
+    height: 38rem;
+    margin-left: -1.5rem; }
+    .post__postimage--1 {
+      width: 50rem;
+      background-size: cover; }
 
 span {
-  padding-left: 0.4rem;
-}
+  padding-left: .4rem; }
 
 .like,
 .comment {
-  width: 100%;
-}
+  width: 100%; }
 
 .like:hover {
-  background-color: #eee;
-}
+  background-color: #eee; }
 
 .comment:hover {
-  background-color: #eee;
-}
+  background-color: #eee; }
 
 .row {
   max-width: 114rem;
-  margin: 0 auto;
-}
-.row:not(:last-child) {
-  margin-bottom: 1rem;
-}
-.row::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-.row [class^="col-"] {
-  float: left;
-}
-.row [class^="col-"]:not(:last-child) {
-  margin-right: 1rem;
-}
-.row .col-1-of-2 {
-  width: calc((100% - 1rem) / 2);
-}
-.row .col-1-of-3 {
-  width: calc((100% - 2 * 1rem) / 3);
-}
-.row .col-2-of-3 {
-  width: calc(2 * ((100% - 2 * 1rem) / 3) + 1rem);
-}
-.row .col-1-of-4 {
-  width: calc((100% - 3 * 1rem) / 4);
-}
-.row .col-2-of-4 {
-  width: calc(2 * ((100% - 3 * 1rem) / 4) + 1rem);
-}
-.row .col-3-of-4 {
-  width: calc(3 * ((100% - 3 * 1rem) / 4) + 2 * 1rem);
-}
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 1rem; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row [class^="col-"] {
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 1rem; }
+  .row .col-1-of-2 {
+    width: calc((100% - 1rem)/2); }
+  .row .col-1-of-3 {
+    width: calc((100% - 2 * 1rem)/3); }
+  .row .col-2-of-3 {
+    width: calc( 2*((100% - 2 * 1rem)/ 3) + 1rem); }
+  .row .col-1-of-4 {
+    width: calc((100% - 3 * 1rem)/4); }
+  .row .col-2-of-4 {
+    width: calc( 2*((100% - 3 * 1rem)/ 4) + 1rem); }
+  .row .col-3-of-4 {
+    width: calc( 3*((100% - 3 * 1rem)/ 4) + 2 * 1rem); }
 
 .post-comment {
   padding: 0rem;
-  margin: 2rem;
-}
+  margin: 2rem; }
 
 .comment__user {
   background-color: #f7f7f7;
@@ -458,48 +371,116 @@ span {
   margin-left: 1rem;
   border-radius: 2rem;
   max-width: 60rem;
-  width: auto;
-}
-.comment__user__text {
-  color: #000;
-  font-size: 1.7rem;
-  margin: 0 1.5rem;
-}
+  width: auto; }
+  .comment__user__text {
+    color: #000;
+    font-size: 1.7rem;
+    margin: 0 1.5rem; }
 
 .create-post {
   padding: 5px;
   height: auto;
   width: 60rem;
-  border-radius: 0.5rem;
+  border-radius: .5rem;
+  background-color: #fff;
+  box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2); }
+  .create-post__seen {
+    width: 4rem;
+    display: inline-block;
+    margin-left: .5rem;
+    padding: 0rem;
+    height: auto;
+    font-size: 1.2rem;
+    border-radius: .5rem;
+    background-color: #777; }
+  .create-post__textarea {
+    display: block;
+    margin: 1rem;
+    width: 58rem;
+    outline: none;
+    background-color: #eee;
+    border: none;
+    font-size: 2rem;
+    height: auto; }
+  .create-post__add-photo {
+    width: 54rem;
+    height: 5rem;
+    border: 1px solid black;
+    font-size: 2rem;
+    font-weight: 500;
+    margin: 0 3rem;
+    border-radius: .5rem; }
+
+.navbar {
+  width: 100%;
+  height: 6rem;
   background-color: #fff;
   box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
-}
-.create-post__seen {
-  width: 4rem;
-  display: inline-block;
-  margin-left: 0.5rem;
-  padding: 0rem;
-  height: auto;
-  font-size: 1.2rem;
-  border-radius: 0.5rem;
-  background-color: #777;
-}
-.create-post__textarea {
-  display: block;
-  margin: 1rem;
-  width: 58rem;
-  outline: none;
-  background-color: #eee;
-  border: none;
-  font-size: 2rem;
-  height: auto;
-}
-.create-post__add-photo {
-  width: 54rem;
-  height: 5rem;
-  border: 1px solid black;
-  font-size: 2rem;
-  font-weight: 500;
-  margin: 0 3rem;
-  border-radius: 0.5rem;
-}
+  position: sticky;
+  top: 0; }
+  .navbar_left {
+    position: absolute;
+    left: 0rem; }
+    .navbar_left_searchbox {
+      height: 4rem;
+      margin-top: -3.5rem;
+      margin-left: 6rem;
+      display: flex;
+      -webkit-display: flex;
+      width: 90%;
+      background-color: #eee;
+      border-radius: 1rem;
+      outline: none;
+      border: none;
+      padding: 1rem; }
+    .navbar_left_logo {
+      font-size: 3.5rem;
+      margin-top: 1rem;
+      color: #1877f2;
+      background-image: linear-gradient(to right, #1877f2, #0a0a94);
+      -webkit-background-clip: text;
+      color: transparent; }
+  .navbar_right {
+    float: right; }
+  .navbar_middle {
+    position: absolute;
+    left: 50rem; }
+  .navbar_icons {
+    display: inline;
+    padding: 1rem;
+    height: 2rem;
+    width: 2rem;
+    border-radius: 50%; }
+    .navbar_icons:hover {
+      cursor: pointer;
+      background-color: #eee;
+      border-radius: 2rem; }
+  .navbar_icon {
+    margin-top: 2rem;
+    font-size: 2rem;
+    color: #000; }
+  .navbar_btn {
+    display: inline-block;
+    border: none;
+    outline: none;
+    background-color: none; }
+    .navbar_btn_name {
+      text-decoration: none;
+      color: black;
+      display: inline; }
+    .navbar_btn:hover {
+      cursor: pointer;
+      background-color: #eee;
+      border-radius: 2rem; }
+  .navbar__profilepicture {
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    background-size: cover;
+    display: flex;
+    position: absolute;
+    right: 17.5rem;
+    top: 1rem; }
+
+ul {
+  list-style: none; }
