--- a/Client/facebookclone/src/css/style.css
+++ b/Client/facebookclone/src/css/style.css
@@ -204,7 +204,9 @@ body {
   .profile_section {
     height: 55rem;
     width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.2), white 50%); }
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), white 50%);
+    display: flex;
+    flex-direction: column; }
   .profile_information {
     width: 100%;
     height: auto;
@@ -219,11 +221,18 @@ body {
       top: 0; }
     .profile_information__posts {
       margin-left: -5rem; }
+  .profile_row {
+    display: flex;
+    justify-content: center; }
   .profile__cover {
     border-radius: 1.2rem;
     width: 80%;
     height: 39rem;
     margin: 0 auto; }
+    .profile__cover-1 {
+      border-radius: 1.2rem;
+      width: 100%;
+      height: 39rem; }
   .profile__profilepicture {
     display: flex; }
   .profile__profilepicture-1 {
@@ -411,76 +420,69 @@ span {
     margin: 0 3rem;
     border-radius: .5rem; }
 
-.navbar {
-  width: 100%;
-  height: 6rem;
+.navbar_1 {
   background-color: #fff;
-  box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
+  height: 5rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
   position: sticky;
-  top: 0; }
-  .navbar_left {
-    position: absolute;
-    left: 0rem; }
-    .navbar_left_searchbox {
-      height: 4rem;
-      margin-top: -3.5rem;
-      margin-left: 6rem;
-      display: flex;
-      -webkit-display: flex;
-      width: 90%;
-      background-color: #eee;
-      border-radius: 1rem;
-      outline: none;
-      border: none;
-      padding: 1rem; }
-    .navbar_left_logo {
-      font-size: 3.5rem;
-      margin-top: 1rem;
-      color: #1877f2;
+  -webkit-position: sticky;
+  top: 0;
+  z-index: 1; }
+  .navbar_1_icons {
+    color: #000;
+    font-size: 2.5rem;
+    margin: 0 .4rem; }
+    .navbar_1_icons:hover {
+      cursor: pointer; }
+  .navbar_1_icon {
+    color: #000;
+    font-size: 2.5rem;
+    margin: 0 1.2rem;
+    background-color: #f7f7f7;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    padding-left: 0.7rem; }
+    .navbar_1_icon:hover {
+      cursor: pointer; }
+  .navbar_1_left {
+    width: 33%;
+    margin-left: 1rem; }
+    .navbar_1_left_logo {
       background-image: linear-gradient(to right, #1877f2, #0a0a94);
       -webkit-background-clip: text;
       color: transparent; }
-  .navbar_right {
-    float: right; }
-  .navbar_middle {
-    position: absolute;
-    left: 50rem; }
-  .navbar_icons {
-    display: inline;
-    padding: 1rem;
-    height: 2rem;
-    width: 2rem;
-    border-radius: 50%; }
-    .navbar_icons:hover {
-      cursor: pointer;
-      background-color: #eee;
-      border-radius: 2rem; }
-  .navbar_icon {
-    margin-top: 2rem;
-    font-size: 2rem;
-    color: #000; }
-  .navbar_btn {
-    display: inline-block;
-    border: none;
-    outline: none;
-    background-color: none; }
-    .navbar_btn_name {
-      text-decoration: none;
-      color: black;
-      display: inline; }
-    .navbar_btn:hover {
-      cursor: pointer;
-      background-color: #eee;
-      border-radius: 2rem; }
-  .navbar__profilepicture {
+    .navbar_1_left_searchbox {
+      height: 3rem;
+      border: none;
+      outline: none;
+      background-color: #f7f7f7;
+      border-radius: 3rem;
+      font-size: 1.3rem;
+      padding: 1rem; }
+  .navbar_1_middle {
+    width: 33%;
+    padding-left: 1.5rem; }
+  .navbar_1_right {
+    width: 33%; }
+    .navbar_1_right_right {
+      float: right; }
+  .navbar_1__profilepicture {
     height: 4rem;
     width: 4rem;
     border-radius: 50%;
-    background-size: cover;
+    margin-top: .6rem; }
+  .navbar_1_gotoprofile {
     display: flex;
-    position: absolute;
-    right: 17.5rem;
-    top: 1rem; }
+    font-size: 1.2rem;
+    color: #000; }
+  .navbar_1_btn_name {
+    margin-top: 1rem;
+    text-decoration: none; }
 
 ul {
-  list-style: none; }
+  list-style: none;
+  display: flex;
+  justify-content: flex-start; }
