--- a/Client/facebookclone/src/sass/components/_profile.scss
+++ b/Client/facebookclone/src/sass/components/_profile.scss
@@ -1,8 +1,7 @@
 .profile {
-  position: relative;
   height: 100%;
   width: 100%;
-  transition: all 0.2s;
+  transition: all 0.2s ease-in-out;
   &_section {
     height: 55rem;
     width: 100%;
@@ -16,20 +15,17 @@
   }
   &_information {
     width: 100%;
-    height: auto;
+    height: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    
     &_intro {
       width: 40rem;
-      margin-top: -210rem;
       position: sticky;
       -webkit-position: sticky;
       top: 0;
     }
-    &__posts {
-      margin-left: -5rem;
-    }
+    
   }
   &_row{
     display: flex;
@@ -119,6 +115,7 @@
 &_container{
     width:35rem;
     background-color:$color-white;
+    margin:1rem;
     height:auto;
     padding:1rem;
     border-radius: 2rem;
