--- a/Client/facebookclone/src/pages/MessagesPage/index.scss
+++ b/Client/facebookclone/src/pages/MessagesPage/index.scss
@@ -1,6 +1,6 @@
 .MessagesPageContainer {
   display: grid;
-  grid-template-columns: 0.5fr 1fr 0.5fr;
+  grid-template-columns: 300px 1fr auto;
   grid-template-areas:
     "NavBar NavBar NavBar"
     "searchBar  individualmessages friendsInfo"
@@ -153,8 +153,8 @@
       border-bottom: 1px solid black;
       background-color: #242526;
       display: grid;
-      grid-template-columns: 15px 0.001fr 1fr auto;
-      grid-template-areas: ". topBarProfileImageContainer topBarPersonInforContainer .";
+      grid-template-columns: 15px 0.001fr 1fr auto 0.001fr;
+      grid-template-areas: ". topBarProfileImageContainer topBarPersonInforContainer . topbarToggleFrindsInfo";
 
       .MessagesPageContainer__individualMessages__topBar__ImageContainer {
         height: 100%;
@@ -180,6 +180,14 @@
         & > p {
           margin: 0;
           font-size: 14px;
+        }
+      }
+      .MessagesPageContainer__individualMessages__topBar__friendsInfoToggle {
+        grid-area: topbarToggleFrindsInfo;
+        display: grid;
+        place-items: center;
+        .MessagesPageContainer__individualMessages__topBar__friendsInfoToggle__button {
+          margin: auto;
         }
       }
     }
@@ -299,6 +307,7 @@
           height: 100%;
           color: white;
           background-color: black;
+          font-size: 20px;
           & > div > .MuiFilledInput-inputMultiline {
             color: aliceblue;
           }
@@ -316,15 +325,60 @@
   }
   .MessagesPageContainer__friendsInfo {
     grid-area: friendsInfo;
-    border-right: 1px solid #8f8f8f;
-    // border-top: 1px solid #8f8f8f;
     overflow-y: scroll;
     height: 100%;
     display: -webkit-flex;
     display: flex;
-    height: 100vh;
-    width: 100%;
-    overflow: auto;
+    width: 300px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    .MessagesPageContainer__friendsInfo__topbar {
+      display: flex;
+      flex-direction: row;
+      position: relative;
+      .MessagesPageContainer__friendsInfo__topbar__friendsInfoToggle {
+        display: grid;
+        position: absolute;
+        top: 0;
+        left: 0;
+        .MessagesPageContainer__friendsInfo__topbar__friendsInfoToggle__Button {
+          opacity: 0%;
+          display: none;
+        }
+      }
+      .MessagesPageContainer__friendsInfo__topbar__nameAndPhotoDiv {
+        display: flex;
+        flex-grow: 1;
+        flex-direction: column;
+        align-items: center;
+        .MessagesPageContainer__friendsInfo__topbar__nameAndPhotoDiv__photoContainer {
+          .MessagesPageContainer__friendsInfo__topbar__nameAndPhotoDiv__photoContainer__image {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+          }
+        }
+        .MessagesPageContainer__friendsInfo__topbar__nameAndPhotoDiv__nameContainer {
+          font-size: 18px;
+        }
+      }
+    }
+
+    .MessagesPageContainer__friendsInfo__buttonHolder {
+      width: 100%;
+      margin-bottom: 10px;
+      display: grid;
+      place-items: center;
+      .MessagesPageContainer__friendsInfo__buttonHolder__button {
+        width: 80%;
+        height: 40px;
+        color: white;
+        text-transform: none;
+        font-size: 13px;
+      }
+    }
 
     &::-webkit-scrollbar {
       width: 5px;
@@ -349,9 +403,9 @@
   }
 }
 
-@media screen and (max-width: 900px) {
+@media only screen and (max-width: 900px) {
   .MessagesPageContainer {
-    grid-template-columns: 0.001fr 1fr 0.5fr;
+    grid-template-columns: 0.001fr 1fr auto;
   }
   .MessagesPageContainer__friendList__IndividualFriends__ImageContainer {
     & > img {
@@ -373,22 +427,41 @@
       }
     }
   }
+  .MessagesPageContainer__friendsInfo {
+    width: 200px !important;
+  }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 550px) {
   .MessagesPageContainer {
-    grid-template-columns: 0.001fr 1fr 0px;
-    grid-template-areas:
-      "NavBar NavBar NavBar"
-      "searchBar  individualmessages friendsInfo"
-      "friendList individualmessages friendsInfo";
+    grid-column: auto;
+    grid-template-columns: 0.001fr auto auto !important;
+    // grid-template-columns: 0.0001fr auto;
+    // grid-template-areas:
+    //   "NavBar  NavBar"
+    //   "searchBar  friendsInfo2"
+    //   "friendList friendsInfo2";
+    // grid-template-rows: auto 125px 1fr;er__individualMessages {
+    // grid-area: friendsInfo2;
   }
-  .MessagesPageContainer__friendList__IndividualFriends {
-    grid-template-columns: 10px;
-    grid-template-areas: "profileImageContainer";
-  }
-  .MessagesPageContainer__friendList__IndividualFriends__ImageContainer__image {
-    width: 10px;
-    height: 10px;
+  .MessagesPageContainer__friendsInfo {
+    width: 100% !important;
+    .MessagesPageContainer__friendsInfo__topbar {
+      position: relative;
+      width: auto;
+      .MessagesPageContainer__friendsInfo__topbar__friendsInfoToggle {
+        display: flex;
+        position: absolute;
+        top: 0;
+        left: 0;
+        .MessagesPageContainer__friendsInfo__topbar__friendsInfoToggle__Button {
+          display: flex !important;
+          opacity: 100% !important;
+        }
+        .MessagesPageContainer__friendsInfo__topbar__friendsInfoToggle__Button__Icon {
+          opacity: 100%;
+        }
+      }
+    }
   }
 }
